--- a/index.html
+++ b/index.html
@@ -2,12 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="icon"
+      href="/favicon.ico"
+    />
+    <style>
+      .global-loading-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        background: linear-gradient(135deg, #fff, #ccc, #fff);
+        animation: bgMove 10s infinite;
+        background-size: 500%;
+      }
+      .global-loading {
+        height: 60px;
+        aspect-ratio: 1;
+        position: relative;
+      }
+      .global-loading::before,
+      .global-loading::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        border-radius: 50%;
+        transform-origin: bottom;
+      }
+      .global-loading::after {
+        background:
+          radial-gradient(at 75% 15%, #fffb, #0000 35%),
+          radial-gradient(at 80% 40%, #0000, #0008),
+          radial-gradient(circle 5px, #fff 94%, #0000),
+          radial-gradient(circle 10px, #000 94%, #0000),
+          linear-gradient(#f93318 0 0) top / 100% calc(50% - 5px),
+          linear-gradient(#fff 0 0) bottom/100% calc(50% - 5px) #000;
+        background-repeat: no-repeat;
+        animation: l20 1s infinite cubic-bezier(0.5, 120, 0.5, -120);
+      }
+      .global-loading::before {
+        background: #ddd;
+        filter: blur(8px);
+        transform: scaleY(0.4) translate(-13px, 0px);
+      }
+      @keyframes bgMove {
+        0% {
+          background-position: 0 0;
+        }
+        100% {
+          background-position: 100% 100%;
+        }
+      }
+      @keyframes l20 {
+        30%,
+        70% {
+          transform: rotate(0deg);
+        }
+        49.99% {
+          transform: rotate(0.2deg);
+        }
+        50% {
+          transform: rotate(-0.2deg);
+        }
+      }
+    </style>
     <title>OnSword</title>
   </head>
   <body>
-    <div id="root" style="height: 100%"></div>
+    <div
+      id="root"
+      style="height: 100%"
+    >
+      <div class="global-loading-box">
+        <div class="global-loading"></div>
+      </div>
+    </div>
   </body>
 </html>
