--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="/favicon.ico"
     />
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
       .global-loading-box {
         display: flex;
         justify-content: center;
