--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <script>
+      <!-- 去除提示 -->
+      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = { isDisabled: true }
+    </script>
     <link
       rel="icon"
       href="/favicon.ico"
